--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		
-<meta name="ttexp/config/environment" content="%7B%22modulePrefix%22%3A%22ttexp%22%2C%22environment%22%3A%22development%22%2C%22baseURL%22%3A%22/%22%2C%22defaultLocationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22LOG_ACTIVE_GENERATION%22%3Atrue%2C%22LOG_VIEW_LOOKUPS%22%3Atrue%2C%22name%22%3A%22ttexp%22%2C%22version%22%3A%220.0.0+58172170%22%7D%2C%22cordova%22%3A%7B%22rebuildOnChange%22%3Afalse%2C%22emulate%22%3Afalse%2C%22liveReload%22%3A%7B%22enabled%22%3Afalse%2C%22platform%22%3A%22ios%22%7D%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20%27unsafe-eval%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22isCordovaBuild%22%3Atrue%2C%22locationType%22%3A%22hash%22%2C%22exportApplicationGlobal%22%3Atrue%7D" />
-<script src="/ember-cli-live-reload.js" type="text/javascript"></script>
+<meta name="ttexp/config/environment" content="%7B%22modulePrefix%22%3A%22ttexp%22%2C%22environment%22%3A%22development%22%2C%22baseURL%22%3A%22/%22%2C%22defaultLocationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22LOG_ACTIVE_GENERATION%22%3Atrue%2C%22LOG_VIEW_LOOKUPS%22%3Atrue%2C%22name%22%3A%22ttexp%22%2C%22version%22%3A%220.0.0+9c579e0d%22%7D%2C%22cordova%22%3A%7B%22rebuildOnChange%22%3Afalse%2C%22emulate%22%3Afalse%2C%22liveReload%22%3A%7B%22enabled%22%3Afalse%2C%22platform%22%3A%22ios%22%7D%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20%27unsafe-eval%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22isCordovaBuild%22%3Atrue%2C%22locationType%22%3A%22hash%22%2C%22exportApplicationGlobal%22%3Atrue%7D" />
 		
 		<link rel="stylesheet" href="assets/vendor.css">
 		<link rel="stylesheet" href="assets/ttexp.css">
@@ -19,11 +18,13 @@
 		
 	</head>
 	<body>
-	
 		<script src="cordova.js"></script>
 		
+		<script src="phonegap.js"></script>
 		<script src="assets/vendor.js"></script>
 		<script src="assets/ttexp.js"></script>
+		
+		INIZIO
 		
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,6 +33,9 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 		
+		
+		
+		FINE
 		
 	</body>
 </html>
