cambiata grafica homepage

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
         <meta name="msapplication-tap-highlight" content="no">
 
 		<meta http-equiv="Content-Security-Policy"
-			content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src *; img-src * 'self' data:; media-src *">
+			content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src *; img-src 'self' data:; media-src *">
 		<title>True Training Experience</title>
 		
 		
