--- a/www/index.html
+++ b/www/index.html
@@ -14,10 +14,10 @@
 		<title>True Training Experience</title>
 		
 		
-<meta name="ttexp/config/environment" content="%7B%22modulePrefix%22%3A%22ttexp%22%2C%22environment%22%3A%22test%22%2C%22baseURL%22%3A%22/%22%2C%22defaultLocationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22LOG_STACKTRACE_ON_DEPRECATION%22%3Afalse%7D%2C%22APP%22%3A%7B%22serverApiUrl%22%3A%22http%3A//demo.ttexp.net/api%22%2C%22LOG_ACTIVE_GENERATION%22%3Afalse%2C%22LOG_VIEW_LOOKUPS%22%3Afalse%2C%22name%22%3A%22ttexp%22%2C%22version%22%3A%220.0.0+799f29f8%22%7D%2C%22cordova%22%3A%7B%22rebuildOnChange%22%3Afalse%2C%22emulate%22%3Afalse%2C%22liveReload%22%3A%7B%22enabled%22%3Afalse%2C%22platform%22%3A%22ios%22%7D%7D%2C%22locationType%22%3A%22hash%22%2C%22isCordovaBuild%22%3Atrue%2C%22exportApplicationGlobal%22%3Atrue%7D" />
+<meta name="ttexp/config/environment" content="%7B%22modulePrefix%22%3A%22ttexp%22%2C%22environment%22%3A%22development%22%2C%22baseURL%22%3A%22/%22%2C%22defaultLocationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22LOG_STACKTRACE_ON_DEPRECATION%22%3Afalse%7D%2C%22APP%22%3A%7B%22serverApiUrl%22%3A%22http%3A//ttexp-server.localhost/api%22%2C%22LOG_ACTIVE_GENERATION%22%3Atrue%2C%22LOG_VIEW_LOOKUPS%22%3Atrue%2C%22name%22%3A%22ttexp%22%2C%22version%22%3A%220.0.0+17ade5d9%22%7D%2C%22cordova%22%3A%7B%22rebuildOnChange%22%3Afalse%2C%22emulate%22%3Afalse%2C%22liveReload%22%3A%7B%22enabled%22%3Afalse%2C%22platform%22%3A%22ios%22%7D%7D%2C%22isCordovaBuild%22%3Atrue%2C%22locationType%22%3A%22hash%22%2C%22exportApplicationGlobal%22%3Atrue%7D" />
 		
-		<link rel="stylesheet" href="assets/vendor.css" integrity="sha256-2KCOvyndK6GnKnFen9QfuePwYcYPkygEczTVvYEHSQs= sha512-v+elZES+SxH4y4J2mqFo7DlB5CBK9fxDnaffekH3vKB1b6XS3zWP6p2c/YkAp29AFA3KwCLxZ0L1N0+PGJE9lw==" >
-		<link rel="stylesheet" href="assets/ttexp.css" integrity="sha256-x78lVRdl3+kBc7rZfzHyPZJdjsnJ0zguaxsA4waAr3k= sha512-OBeAKQkId6LzrVy1Ja1lidaspTYiBsVJM1yJX4Huz+ufKMNtShwQ0YSgy3i+GiBv6YvP6P2NbHyOdctjuz/lFA==" >
+		<link rel="stylesheet" href="assets/vendor.css">
+		<link rel="stylesheet" href="assets/ttexp.css">
 		
 		
 	</head>
@@ -25,8 +25,8 @@
 		<script src="cordova.js"></script>
 		
 		<script src="phonegap.js"></script>
-		<script src="assets/vendor.js" integrity="sha256-T2oRsfz3ED29FDNMOXqCslMzwLweM0sZzwtqLvDcxqs= sha512-+BhMuIfVOYVQm3zx8pwLDGDSJ9ieZNu58G9QhvV9+RqbgQiYK9JGyCLP/gp0Yk713RS0KCruAkV74rrHbtG8Bw==" ></script>
-		<script src="assets/ttexp.js" integrity="sha256-ENaACSJQNwFuP7pzLHK6rAHbboDDB7yhwsK+gKcj9bA= sha512-sy0b2+mUUm3P+UQd+e8PqXX1Dcj7vseRWiglmkXTN/oDKKRzU/E4OXOdqBNNSk5bCupcD0VCMFj7uvS6xx/sgg==" ></script>
+		<script src="assets/vendor.js"></script>
+		<script src="assets/ttexp.js"></script>
 		
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
